[tool.poetry]
name = "jps-vs-a-star"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]
dependencies = { python = ">=3.9,<4.0" }
dev-dependencies = { pytest = "^8.4.1", pytest-html = "^4.1.1" }

[tool.poetry.group.dev.dependencies]
pytest-html = "^4.1.1"

[tool.pytest.ini_options]
python_paths = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
